syntax = "proto3";
package dydxcometbft.clob;

import "gogoproto/gogo.proto";
import "dydxcometbft/clob/order.proto";
import "dydxcometbft/subaccounts/subaccount.proto";

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/cometbft/cometbft/proto/dydxcometbft/clob";

// dYdX fork: This file is trimmed down to not include the service component since it requires the
// `option (cosmos.msg.v1.service) = true;` tag.

// MsgPlaceOrder is a request type used for placing orders.
message MsgPlaceOrder { Order order = 1 [ (gogoproto.nullable) = false ]; }

// MsgCancelOrder is a request type used for canceling orders.
message MsgCancelOrder {
  OrderId order_id = 1 [ (gogoproto.nullable) = false ];
  // Information about when the order cancellation expires.
  oneof good_til_oneof {
    // The last block this order cancellation can be executed at.
    // Used only for Short-Term orders and must be zero for stateful orders.
    uint32 good_til_block = 2;

    // good_til_block_time represents the unix timestamp (in seconds) at which a
    // stateful order cancellation will be considered expired. The
    // good_til_block_time is always evaluated against the previous block's
    // `BlockTime` instead of the block in which the order is committed.
    // This value must be zero for Short-Term orders.
    fixed32 good_til_block_time = 3;
  }
}

// MsgBatchCancel is a request type used for batch canceling orders.
// This msg is not atomic. Cancels will be performed optimistically even
// if some cancels are invalid or fail.
message MsgBatchCancel {
  // The subaccount this batch cancel will be applied for.
  dydxcometbft.subaccounts.SubaccountId  subaccount_id = 1
      [ (gogoproto.nullable) = false ];

  // The batch of short term orders that will be cancelled.
  repeated OrderBatch short_term_cancels = 2 [ (gogoproto.nullable) = false ];

  // The last block the short term order cancellations can be executed at.
  uint32 good_til_block = 3;
}

// OrderBatch represents a batch of orders all belonging to a single clob pair
// id. Along with a subaccount id and an order flag, is used to represent a
// batch of orders that share the same subaccount, order flag, and clob pair id.
message OrderBatch {
  // The Clob Pair ID all orders in this order batch belong to.
  uint32 clob_pair_id = 1;
  // List of client ids in this order batch.
  repeated fixed32 client_ids = 2;
}

